Add display none rule

--- a/style.scss
+++ b/style.scss
@@ -35,6 +35,12 @@ img {
   cursor: pointer;
 }
 
+#third-box,
+#fourth-box,
+.triangle {
+  display: none;
+}
+
 .display-m {
     display: block;
   }
